# projet-kayak-bloc1

./: .env.dist  .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
notebooks/: 01_scope_geocoding_nominatim.ipynb  02_weather_scoring_top5_map.ipynb  03_booking_scraping_playwright.ipynb  04_send_csv_to_aws_s3.ipynb  05_etl_s3_to_rds_postgres.ipynb
outputs/data/: cities_geocoded.csv  cities_weather_7d_raw.csv  cities_weather_scored.csv  top20_booking_hotels.csv  top20_booking_hotels_enriched.csv  top5_booking_hotels.csv
