[project]
name = "projet-kayak-bloc1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.96",
    "kaleido>=0.2.1",
    "matplotlib>=3.10.9",
    "numpy>=1.25",
    "pandas>=2.0",
    "playwright>=1.40",
    "plotly>=5.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "ipykernel>=6.0",
    "jupyter>=1.0",
]
